# haier_arm_driver

./: README.md
ambot_driver_node/: CMakeLists.txt  main.cpp  package.xml
ambot_driver_node/config/: n1_configurations.yaml
ambot_driver_node/launch/: n1_start.launch.py
ambot_driver_node/src/driver/: ambotDriver.cpp  ambotDriver.hpp  robot.cpp  robot.hpp
ambot_driver_node/src/protocol/: crcModbus.cpp  privateProtocol.cpp  privateProtocol.hpp  protocolStruct.cpp  protocolStruct.hpp  queue.hpp
ambot_driver_node/src/ros/: ambotRosClass.cpp  ambotRosClass.hpp
bimax_arm_driver_node/: CMakeLists.txt  main.cpp  package.xml
bimax_arm_driver_node/config/: arm_driver_config.yaml
bimax_arm_driver_node/launch/: bimax_arm_driver_node.launch.py
bimax_arm_driver_node/src/driver/: ambotDriver.cpp  ambotDriver.hpp  robot.cpp
bimax_arm_driver_node/src/protocol/: crcModbus.hpp  filter.hpp  queue.hpp
bimax_arm_driver_node/src/ros/: ambotRosClass.cpp  ambotRosClass.hpp
bimax_msgs-master/: CMakeLists.txt  package.xml
bimax_msgs-master/action/: BimaxFunction.action
bimax_msgs-master/msg/: ForceState.msg  GpsState.msg  ImuBase.msg  ImuState.msg  MotorCommand.msg  MotorError.msg  MotorState.msg  Performance.msg  Quaternion.msg  RobotCommand.msg  RobotState.msg  UserCommand.msg
bimax_msgs-master/srv/: CatcherControl.srv  MagnetControl.srv  MopControl.srv
